# projects

./: .gitignore  README.md
completed/BoggleSolver/: BoggleSolver.py  BoggleSolver.py~  README  README~  words.txt
completed/PeriodicTableWords/: allposs.txt  fixelems.py~  makeWordsFromPeriodicTable.py
completed/Words From Numpad/: numpad.py  numpadwords6letters.txt
pending/2048solver/: README.md  RuleStrategy.py  Strategy.py  solver.py  util.py
pending/AnagramGenerator/: README.txt  README.txt~
pending/AutoComplete/: LanguageModel.py  README  autocomplete-gui.py  autocomplete.py  minimumeditdistance.py  minimumeditdistance.py~  tktest.py
pending/CppPractice/: a.out  myfirst.cpp  myfirst.cpp~
pending/DocumentClassification/: README.txt
pending/EulerProject/: Readme.md  eulerproject.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  p17.py  p18.py  p19.py  p20.py  p21.py  p22.py  p23.py  p24.py  p25.py  p26.py  p27.py  p28.py  p29.py  p30.py  p31.py  p32.py  p33.py  p35.py  p36.py  p37.py  p67.py  p98.py
pending/HAROLD/: README  harold.py  harold.py~
pending/LanguageClassification/: FeatureMap.py  FeatureVector.py  README.txt  README.txt~  languageclassifier.py  languageclassifier.py~  languageclassifier_liblinear.py
pending/Mezmory/: FeatureTracking.csv  Mezmory Documentation.html  Mezmory.html  Mezmory.py  MezmoryAtAGlance.odg  MezmoryBoard.html  MezmoryBoard.py  TestMezmory.bat  (+6 more)
pending/perlerportraits/: CMakeLists.txt  Makefile  PixelArt.gpl  README.md  camera.cpp  cameratest.cpp  imageindexer.cpp  mouse.cpp  perlerportraits.cpp  videocaptest.cpp
(+211 files in other folders)
