cmake_minimum_required(VERSION 2.8)
project( perlerportraits )
find_package( OpenCV REQUIRED )
add_executable( perlerportraits perlerportraits.cpp )
add_executable( mouse mouse.cpp )
add_executable( imageindexer imageindexer.cpp )
target_link_libraries( perlerportraits ${OpenCV_LIBS} )
target_link_libraries( mouse ${OpenCV_LIBS} )
target_link_libraries( imageindexer ${OpenCV_LIBS} )